Fix padding on mobile ''Developed by"

--- a/frontend/src/components/Header/header.scss
+++ b/frontend/src/components/Header/header.scss
@@ -29,3 +29,9 @@
     }
   }
 }
+
+@media (max-width: 768px) {
+  .developed-by {
+    padding: 0 20px;
+  }
+}
